--- a/css/index.css
+++ b/css/index.css
@@ -59,5 +59,7 @@ body {
 
 footer {
     background-color: var(--color-background-dark);
+    text-align: center; /* Align text in center */
+    padding: 1em 0 1em 0; /* Adds 1em of padding to top and bottom */
 }
 
