--- a/css/index.css
+++ b/css/index.css
@@ -64,22 +64,45 @@ body {
 }
 
 .category {
+    text-align: center;
+}
 
+.category h1 {
+    margin-bottom: 0.4em; /* Add some space */
 }
 
 .category-item {
-    width: 33vw;
-    height: 30vh;
+    width: 33%; /* Set item width to 33% of screen width */
+    display: inline-block; /* Displays items as inline blocks */
+    line-height: 0; /* Remove line height caused by inline-block */
+    position: relative; /* Relative positioning inside items for overlay tag */
+}
 
-    display: inline-block;
+.category-item:hover {
+    cursor: pointer;
 }
 
 .category-item img {
     width: 100%;
 }
 
+.category-item h2 {
+    background-color: rgba(0,0,0,0.5); /* Set background to black with 50% transparency. This is what makes the overlay effect */
+    display: flex; /* Set display to flex, used to center content */
+    justify-content: center; /* Center content in the middle (horizontally) */
+    align-items: center; /* Center content in the middle (vertically) */
+    color: var(--color-light-text);
+    height: 4em; /* Set height of overlay to 4em */
+    width: 100%; /* Set overlay width to 100% */
+    position: absolute; /* Set positioning to absolute */
+    bottom: 0; /* Place overlay at the bottom */
+    left: 0; /* Place overlay to the left */
+}
+
 .home-article {
-    margin: auto 25vw auto 25vw;
+    margin: 2em 25vw auto 25vw;
+    text-align: center;
+    display: block;
 }
 
 footer {
