Added custom font and made some small additional changes

--- a/css/index.css
+++ b/css/index.css
@@ -54,6 +54,10 @@ footer{
     display: flex;
     justify-content: center; /* Center content in the middle (horizontally) */
     align-items: center; /* Center content in the middle (vertically) */
+    text-decoration: none; /* Remove underlines from links */
+    font-family: 'Lobster', sans-serif; /* Specify the desired font */
+    color: #000000; /* Set the text color */
+    letter-spacing: 3px;
 }
 
 .header-nav {
@@ -61,10 +65,12 @@ footer{
     display: flex;
     justify-content: center; /* Center content in the middle (horizontally) */
     align-items: center; /* Center content in the middle (vertically) */
+    text-decoration: none; /* Remove underlines from links */
 }
 
 .header-nav ul {
     list-style: none; /* Remove list dots */
+    letter-spacing: 3px;
 }
 
 .header-nav li {
@@ -76,6 +82,8 @@ footer{
     text-decoration: none; /* Remove any standard a tag ("link") styling  */
     color: var(--color-light-text);
     text-align: center;
+    transition: color 0.3s; /* Add a smooth color transition on hover */
+    font-family: 'Lobster', sans-serif; /* Specify the desired font */
 }
 
 /* Very basic styling when user hovers the a tag in the navigation */
